[package]
name = "comment_manager"
version = "0.1.2"
edition = "2021"
authors = ["Joshua <joshuawintersbrown@gmail.com>"]
readme = "README.md"
license-file = "LICENSE.md"
description = "The underlying interface API for interacting with the comments database."
repository = "https://github.com/ofgrenudo/comment_manager"
homepage = "https://github.com/ofgrenudo/comment_manager"

[lib]
name = "comment_manager"
path = "src/lib.rs"
test = true            
doctest = true         
bench = true           
doc = true             
harness = true         
crate-type = ["lib"]  

[dependencies]
uuid = { version = "1.5", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
sha256 = "1.2.2"
sqlite = "0.31.0"